--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# pyenv
+.python-version
+
 # Mac files
 .DS_Store
 
@@ -24,6 +27,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.eggs
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
