Add 3.8 support. Tweak release stuff.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
 [aliases]
-release = clean --all sdist bdist_egg bdist_wheel upload
 
 [metadata]
 description-file = README.md
+
+[bdist_wheel]
+universal=1
